# NanoDiffVision

./: .gitignore  LICENSE  Makefile  README.md  data_loader.py  main.py  model.ipynb  model.py  pyproject.toml  train.py
configs/CIFAR10/: light_balanced_config.yml  light_config.yml  light_configDiff.yml  lite_balanced_config.yml  lite_config.yml  lite_configDiff.yml
configs/FashionMNIST/: attentiondiff_config.yml  balanced_config.yml  basic_config.yml  lite_balanced_config.yml  lite_config.yml  lite_configDiff.yml
configs/MNIST/: attentiondiff_config.yml  balanced_config.yml  basic_config.yml  lite_balanced_config.yml  lite_config.yml  lite_configDiff.yml
src/: attention.py  data_loader.py  layers.py  main.py  model.py  utils.py  vit.py
src/configs/: config.yml
