[project]
name = "vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightning-flash>=0.8.1",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pytorch-lightning-bolts>=0.3.2.post1",
    "pytorch-lightning==2.2.0",
    "scipy>=1.14.1",
    "tensorboard>=2.18.0",
    "torch==2.2.0",
    "torchvision>=0.17.0",
    "wandb>=0.18.7",
]
